# Hisi_NNIE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: wk_yolov3.h  yolov3_core.h
main/: CMakeLists.txt  ive_kcf_main.c  kf_yolov3_main.c  nnie_yolov3.c  nnie_yolov3_main.c  sot_main.c  sot_thread.c  sot_thread.cbk  wk_sot_queue.c  wk_sot_thread.c
main/include/: sot_thread.h  wk_sot_queue.h  wk_sot_thread.h
release/: kcf_Exe  kf_yolov3_Exe  sot_Exe  yolov3_Exe
src/: sample_comm_ive.c  sample_comm_nnie.c  wk_yolov3.c  yolov3_core.c
src/common/: sample_comm_isp.c  sample_comm_vo.c
src/cv_kalman/: CMakeLists.txt
src/cv_kalman/include/: kalman_filter.h
src/cv_kalman/src/: kalman_filter.cpp  opencv-kalman.cpp
src/hi_common/: CMakeLists.txt
src/hi_common/include/: sample_comm.h
src/hi_common/src/: sample_comm_isp.c  sample_comm_sys.c  sample_comm_vi.c
src/hi_svp/: CMakeLists.txt
src/hi_svp/include/: kcf_core.h  sample_comm_nnie.h  wk_kcf.h  wk_sot.h  wk_svp_type.h  wk_utils.h  wk_yolov3.h  yolov3_core.h
src/hi_svp/src/: kcf_core.c  sample_ive_queue.c  wk_kcf.c  wk_sot.c  wk_utils.c  wk_yolov3.c  yolov3_core.c
